# voicevox_engine

./: README.md  pyproject.toml  requirements.txt
voicevox_engine/: user_dict.py
