[project]
name = "voicevox-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "appdirs>=1.4.4",
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "numpy>=2.3.1",
    "pyopenjtalk",
    "python-multipart>=0.0.20",
    "pyworld>=0.3.5",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "scipy>=1.16.0",
    "setuptools<=81",
    "soundfile>=0.13.1",
    "uvicorn>=0.35.0",
]

[tool.uv.sources]
pyopenjtalk = { git = "https://github.com/VOICEVOX/pyopenjtalk", rev = "74703b034dd90a1f199f49bb70bf3b66b1728a86" }
